--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#publication">Publications</a>
                     </li>
+                    <li class="nav-item">
+                        <a class = "nav-link" href = "#research">Research</a>
+                    </li>
                 </ul>
                 
             </div>
@@ -61,8 +64,8 @@
             </div>
 
             <div class="col-lg-6">
-                <p> Hi, I am Hua, Hsuan-Fu. I am a currently Ph.D students major in statistics studying in National Cheng-Chi University, Taiwan, advised by 
-                    <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Professor Ruby Chiu-Hsing Weng</a>. I received by B.S. from 
+                <p> Hi, I am Hua, Hsuan-Fu. I am a currently Ph.D students major in statistics studying in National Cheng-Chi University, Taiwan, advised by Professor
+                    <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a>. I received by B.S. from 
                     Department of Statistics, National Cheng-Kung University, Tainan. And I got my Master Degree from Department of Statistics, National Cheng-Chi University, Taipei.
                 </p>
                 <p>
@@ -79,14 +82,21 @@
     <section class="container-fluid section" id="publication">
         <h2 class="page-title">Publications</h2>
         <ol>
-            <li><u>Hsuan-Fu Hua</u>; Ching-Ju Chang; Tse-Ching Lin; Ruby Chiu-Hsing Weng* , Rating of players by Laplace approximation and dynamic modeling, under review
-            <li>Chia-Ming Hsueh; <u>Hsuan-Fu Hua</u>; Sheng-Mao Chang, The Advantage of English Language in World University Rankings, <i>The 26th Taiwan Forum on Sociology of Education</i>
-            </ol>
+            <li><u>Hsuan-Fu Hua</u>; Ching-Ju Chang; Tse-Ching Lin; Ruby Chiu-Hsing Weng* , Rating of players by Laplace approximation and dynamic modeling, <i>International Journal of Forecasting</i>, Accepted. [<a href="http://arxiv.org/abs/2310.10386">arXiv</a>]</li>
+            <li>Chia-Ming Hsueh; <u>Hsuan-Fu Hua</u>; Sheng-Mao Chang, The Advantage of English Language in World University Rankings, <i>The 26th Taiwan Forum on Sociology of Education</i></li>
+        </ol>
 
 
     </section>
-
-    
+    <!--Research Section-->
+    <section class="container-fluid section" id="research">
+        <h2 class="page-title">Research Experience</h2>
+        <o1>
+            <li>An application of Laplace Approximation of Rating Systems, advised by Professor <a href="http://www.aacsb.ntpu.edu.tw/teach/teachsta.php?teacher=NzIzNTVf5by15Y2H5oeL">Sheng-Mao Chang</a></li>
+            <li>A New Perspective on Analyzing World University Rankings, advised by Professor <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a></li>
+            <li>Undergraduate research experience in school data team, advised by Professor Ray-Bing Chen, Professor Sheng-Mao Chang and Professor Chia-Ming Hsueh</li>
+            <li>Statistics Methodology applied on SportsVU data, self motivate</li>
+        </o1>
     <!-- footer section-->
     <footer class="container-fluid footer" id="footer">
         <!-- social media icons -->
