--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <section class="container-fluid section" id="research">
         <h2 class="page-title">Research Experience</h2>
         <o1>
-            <li>An application of Laplace Approximation of Rating Systems, advised by Professor <a href="http://www.aacsb.ntpu.edu.tw/teach/teachsta.php?teacher=NzIzNTVf5by15Y2H5oeL">Sheng-Mao Chang</a></li>
-            <li>A New Perspective on Analyzing World University Rankings, advised by Professor <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a></li>
+            <li>An application of Laplace Approximation of Rating Systems, advised by Professor <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a></li>
+            <li>A New Perspective on Analyzing World University Rankings, advised by Professor <a href="http://www.aacsb.ntpu.edu.tw/teach/teachsta.php?teacher=NzIzNTVf5by15Y2H5oeL">Sheng-Mao Chang</a></li>
             <li>Undergraduate research experience in school data team, advised by Professor Ray-Bing Chen, Professor Sheng-Mao Chang and Professor Chia-Ming Hsueh</li>
             <li>Statistics Methodology applied on SportsVU data, self motivate</li>
         </o1>
