--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
             </div>
 
             <div class="col-lg-6">
-                <p> Hi, I am Hua, Hsuan-Fu. I am a currently Ph.D students major in statistics studying in National Cheng-Chi University, Taiwan, advised by Professor
+                <p> Hi, I am Hua, Hsuan-Fu. I am a currently Ph.D students major in statistics studying in National Cheng-Chi University, Taiwan, where I also got my Master Degree, advised by Professor
                     <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a>. I received by B.S. from 
-                    Department of Statistics, National Cheng-Kung University, Tainan. And I got my Master Degree from Department of Statistics, National Cheng-Chi University, Taipei.
+                    Department of Statistics, National Cheng-Kung University, Tainan. In NCKU, I worked as an undergraduate research assistant under Professor <a href="https://sites.google.com/gm.ntpu.edu.tw/smchang110/">Sheng-Mao Chang</a> and Professor <a href="https://sites.google.com/view/ray-bingchenswebsite/home">Ray-Bing Chen</a>s' adviced.
                 </p>
                 <p>
-                    My research interest lies in rank aggregation and causal inference, I particularly 
-                    interested in sports statistics and enjoy developing models helping build a better team and search for better game planning strategies.
-                    I have done research in player rankings with Bradley-Terry based model and unsupervised learning based on Gaussian Mixture Model(GMM) performed on World University Rankings.
+                    My research interest lies in Bayesian inference, I particularly interested in Bayesian model selection and Bayesian Optimization.
+                    I am also interested in sports statistics and enjoy developing models helping build a better team and search for better game planning strategies.
+                    I have done research in player rankings dynamic modeling under framework of Kalman filter and unsupervised learning based on Gaussian Mixture Model(GMM) performed on World University Rankings.
                     
                 </p>
     </section>
@@ -83,7 +83,7 @@
         <h2 class="page-title">Publications</h2>
         <ol>
             <li><u>Hsuan-Fu Hua</u>; Ching-Ju Chang; Tse-Ching Lin; Ruby Chiu-Hsing Weng* , Rating of players by Laplace approximation and dynamic modeling, <i>International Journal of Forecasting</i>, Accepted. [<a href="http://arxiv.org/abs/2310.10386">arXiv</a>]</li>
-            <li>Chia-Ming Hsueh; <u>Hsuan-Fu Hua</u>; Sheng-Mao Chang, The Advantage of English Language in World University Rankings, <i>The 26th Taiwan Forum on Sociology of Education</i></li>
+            <li>Chia-Ming Hsueh; <u>Hsuan-Fu Hua</u>; Sheng-Mao Chang, The Advantage of English Language in World University Rankings, <i>The 26th Taiwan Forum on Sociology of Education</i>.</li>
         </ol>
 
 
@@ -92,9 +92,9 @@
     <section class="container-fluid section" id="research">
         <h2 class="page-title">Research Experience</h2>
         <o1>
-            <li>An application of Laplace Approximation of Rating Systems, advised by Professor <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a></li>
-            <li>A New Perspective on Analyzing World University Rankings, advised by Professor <a href="http://www.aacsb.ntpu.edu.tw/teach/teachsta.php?teacher=NzIzNTVf5by15Y2H5oeL">Sheng-Mao Chang</a></li>
-            <li>Undergraduate research experience in school data team, advised by Professor Ray-Bing Chen, Professor Sheng-Mao Chang and Professor Chia-Ming Hsueh</li>
+            <li>An application of Laplace Approximation of Rating Systems, advised by Professor <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a>.</li>
+            <li>A New Perspective on Analyzing World University Rankings, advised by Professor <a href="https://sites.google.com/gm.ntpu.edu.tw/smchang110/ ">Sheng-Mao Chang</a>.</li>
+            <li>Undergraduate research experience in school data team, advised by Professor <a href="https://sites.google.com/view/ray-bingchenswebsite/home">Ray-Bing Chen</a>, Professor <a href="https://sites.google.com/gm.ntpu.edu.tw/smchang110/">Sheng-Mao Chang</a> and Professor <a href="https://admin.must.edu.tw/member/page.aspx?UnitID=110&id=5227">Chia-Ming Hsueh</a>.</li>
             <li>Statistics Methodology applied on SportsVU data, self motivate</li>
         </o1>
     <!-- footer section-->
