--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero_text">
                 <h2 class="hero_title">Hi, my name is Hua, Hsuan-Fu</h2>
-                <p class="hero_desc">I am currently a Ph.D student major in statistics.</p>
+                <p class="hero_desc">I am a Ph.D. student major in statistics.</p>
             </div>
         </div>
     </section>
@@ -64,14 +64,14 @@
             </div>
 
             <div class="col-lg-6">
-                <p> Hi, I am Hua, Hsuan-Fu. I am a currently Ph.D students major in statistics studying in National Cheng-Chi University, Taiwan, where I also got my Master Degree, advised by Professor
-                    <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a>. I received by B.S. from 
+                <p> Hi, I am Hua, Hsuan-Fu. I am currently a Ph.D. student major in statistics. I am now studying in National Chengchi University, Taiwan, where I also got my Master degree. I am advised by Professor
+                    <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a>. I received Bachelor degree from 
                     Department of Statistics, National Cheng-Kung University, Tainan. In NCKU, I worked as an undergraduate research assistant under Professor <a href="https://sites.google.com/gm.ntpu.edu.tw/smchang110/">Sheng-Mao Chang</a> and Professor <a href="https://sites.google.com/view/ray-bingchenswebsite/home">Ray-Bing Chen</a>s' adviced.
                 </p>
                 <p>
-                    My research interest lies in Bayesian inference, I particularly interested in Bayesian model selection and Bayesian Optimization.
-                    I am also interested in sports statistics and enjoy developing models helping build a better team and search for better game planning strategies.
-                    I have done research in player rankings dynamic modeling under framework of Kalman filter and unsupervised learning based on Gaussian Mixture Model(GMM) performed on World University Rankings.
+                    My research interest lies in Bayesian inference. I am particularly interested in Bayesian model selection and Bayesian Optimization.
+                    I am also interested in sports statistics and enjoy developing models to help build a better team and search for better game-planning strategies.
+                    I have researched in player rankings dynamic modeling under the framework of the Kalman filter and unsupervised learning based on the Gaussian Mixture Model(GMM) performed on World University Rankings.
                     
                 </p>
     </section>
