--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
             </div>
 
             <div class="col-lg-6">
-                <p> Hi, I am Hua, Hsuan-Fu. I am currently a Ph.D. student major in statistics. I am now studying in National Chengchi University, Taiwan, where I also got my Master degree. I am advised by Professor
+                <p> Hi, I am Hua, Hsuan-Fu. I am currently a Ph.D. student major in statistics. I am now studying in Florida State University, Tallahassee. I got my Master degree in National Chengchi University, Taipei, Taiwan. It is my pleasure to be advised by Professor
                     <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a>. I received Bachelor degree from 
                     Department of Statistics, National Cheng-Kung University, Tainan. In NCKU, I worked as an undergraduate research assistant under Professor <a href="https://sites.google.com/gm.ntpu.edu.tw/smchang110/">Sheng-Mao Chang</a> and Professor <a href="https://sites.google.com/view/ray-bingchenswebsite/home">Ray-Bing Chen</a>s' adviced.
                 </p>
                 <p>
-                    My research interest lies in Bayesian inference. I am particularly interested in Bayesian model selection and Bayesian Optimization.
+                    My research interest mainly lies in Bayesian inference. I am particularly interested in Bayesian model selection and Bayesian Optimization.
                     I am also interested in sports statistics and enjoy developing models to help build a better team and search for better game-planning strategies.
-                    I have researched in player rankings dynamic modeling under the framework of the Kalman filter and unsupervised learning based on the Gaussian Mixture Model(GMM) performed on World University Rankings.
+                    My past research includes player rankings dynamic modeling under the framework of the Kalman filter and unsupervised learning based on the Gaussian Mixture Model(GMM) performed on World University Rankings.
+                    Exploring different fields in statistics and applying them to real data is my passion. 
                     
                 </p>
     </section>
@@ -82,7 +83,7 @@
     <section class="container-fluid section" id="publication">
         <h2 class="page-title">Publications</h2>
         <ol>
-            <li><u>Hsuan-Fu Hua</u>; Ching-Ju Chang; Tse-Ching Lin; Ruby Chiu-Hsing Weng* , Rating of players by Laplace approximation and dynamic modeling, <i>International Journal of Forecasting</i>, Accepted. [<a href="http://arxiv.org/abs/2310.10386">arXiv</a>]</li>
+            <li><u>Hsuan-Fu Hua</u>; Ching-Ju Chang; Tse-Ching Lin; Ruby Chiu-Hsing Weng*, Rating of players by Laplace approximation and dynamic modeling, <i>International Journal of Forecasting</i>, pp. 1-14., vol. 114873, Nov. 2023 [<a href="http://arxiv.org/abs/2310.10386">arXiv</a>]</li>
             <li>Chia-Ming Hsueh; <u>Hsuan-Fu Hua</u>; Sheng-Mao Chang, The Advantage of English Language in World University Rankings, <i>The 26th Taiwan Forum on Sociology of Education</i>.</li>
         </ol>
 
