--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- https://getbootstrap.com/docs/5.2/components/navbar/ -->
     <nav class="navbar navbar-expand-lg bg-light fixed-top navbarScroll">
         <div class="container">
-            <a class="navbar-brand" href="#">Hua, Hsuan-Fu</a>
+            <a class="navbar-brand" href="#">Hua, Robert Hsuan-Fu</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,7 +48,7 @@
     <section class="container-fluid section bgimage" id="home">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero_text">
-                <h2 class="hero_title">Hi, my name is Hua, Hsuan-Fu</h2>
+                <h2 class="hero_title">Hi, my name is Hua, Robert Hsuan-Fu.</h2>
                 <p class="hero_desc">I am a Ph.D. student major in statistics.</p>
             </div>
         </div>
