--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="col-lg-6">
-                <p> Hi, I am Hua, Hsuan-Fu. I am currently a Ph.D. student major in statistics. I am now studying in Florida State University, Tallahassee. I got my Master degree in National Chengchi University, Taipei, Taiwan. It is my pleasure to be advised by Professor
+                <p> Hi, I am Robert Hsuan-Fu Hua. I am currently a Ph.D. student major in statistics. I am now studying in Florida State University, Tallahassee. Prior coming to FSU. I received my Master degree in National Chengchi University, Taipei, Taiwan. It is my pleasure to be advised by Professor
                     <a href="https://stat.nccu.edu.tw/en/members/members1/CHIU-HSING-WENG-31314411">Ruby Chiu-Hsing Weng</a>. I received Bachelor degree from 
                     Department of Statistics, National Cheng-Kung University, Tainan. In NCKU, I worked as an undergraduate research assistant under Professor <a href="https://sites.google.com/gm.ntpu.edu.tw/smchang110/">Sheng-Mao Chang</a> and Professor <a href="https://sites.google.com/view/ray-bingchenswebsite/home">Ray-Bing Chen</a>s' adviced.
                 </p>
@@ -98,6 +98,26 @@
             <li>Undergraduate research experience in school data team, advised by Professor <a href="https://sites.google.com/view/ray-bingchenswebsite/home">Ray-Bing Chen</a>, Professor <a href="https://sites.google.com/gm.ntpu.edu.tw/smchang110/">Sheng-Mao Chang</a> and Professor <a href="https://admin.must.edu.tw/member/page.aspx?UnitID=110&id=5227">Chia-Ming Hsueh</a>.</li>
             <li>Statistics Methodology applied on SportsVU data, self motivate</li>
         </o1>
+    <!--Contributed Talk Session-->
+    <section class="container-fluid section" id = "contributed">
+        <h2 class = 'page-title'> Contributed Talks</h2>
+        <01>
+            <li>STSC34 in New-Taipei City, Taiwan. Jun 2025.</li>
+            <li>The 26th Taiwan Forum on Sociology of Education in Chiayi, Taiwan. Oct 2020. </li>
+            <li></li>
+
+        </01>
+    <!--Poster Session-->
+    <section class="container-fluid section" id = "poster">
+        <h2 class = 'page-title'> Poster Presentations</h2>
+        <01>
+            <li>EAC-ISBA in Hong-Kong. Jun 2024.</li>
+            <li></li>
+
+        </01>
+    
+
+    </section>
     <!-- footer section-->
     <footer class="container-fluid footer" id="footer">
         <!-- social media icons -->
